--- a/vm.html
+++ b/vm.html
@@ -12,72 +12,33 @@
     
 </body>
 </html>
-<div class="machine">
-    <div class="itemsA " style="background-color: white;">
+<div class="machine ">
+    <!-- <div class="itemsA " style="background-color: white;">
 
-    </div>
+    </div> -->
 
     <div class="items">
-
-        <div class="shelf" id="one">
-            <p class="option A1">A1</p>
-            <p class="option A2">A2</p>
-            <p class="option A3">A3</p>
-        </div>
-        <div class="shelf" id="two">
-            <p class="option B4">B4</p>
-            <p class="option B5">B5</p>
-            <p class="option B6">B6</p>
-        </div>
-        <div class="shelf" id="three">
-            <p class="option C7">C7</p>
-            <p class="option C8">C8</p>
-            <p class="option C9">C9</p>
+        <div class="stack" style="display: flex; flex-direction: column;">           
+                <span class="item-into-stack"></span>
+                <p class="option A1">A1</p>                    
         </div>
 
-        <div class="item">
-            <img class="image eA1" src="https://image.flaticon.com/icons/svg/135/135664.svg" alt="">
-        </div>
-        <div class="item">
-            <img class="image eA2" src="https://image.flaticon.com/icons/svg/135/135666.svg" alt="">
-        </div>
-        <div class="item">
-            <img class="image eA3" src="https://image.flaticon.com/icons/svg/788/788507.svg" alt="">
-        </div>
+        <div class="quees" style="display: flex;  flex-direction: column;">   
 
-        <div class="item">
-            <img class="image eB4" src="https://image.flaticon.com/icons/svg/305/305385.svg" alt="">
-        </div>
-        <div class="item">
-            <img class="image eB5" src="https://image.flaticon.com/icons/svg/810/810573.svg" alt="">
-        </div>
-        <div class="item">
-            <img class="image eB6" src="https://image.flaticon.com/icons/svg/714/714220.svg" alt="">
-        </div>
+            <div class="itemsB" style="display: flex; flex-direction: row;">
+                <span class="itemsB1"></span>
+                <span class="itemsB2"></span>
+                <span class="itemsB3"></span>
 
-        <div class="item">
-            <img class="image eC7" src="https://image.flaticon.com/icons/svg/305/305464.svg" alt="">
-        </div>
-        <div class="item">
-            <img class="image eC8" src="https://image.flaticon.com/icons/svg/145/145711.svg" alt="">
-        </div>
-        <div class="item">
-            <img class="image eC9" src="https://image.flaticon.com/icons/svg/776/776107.svg" alt="">
-        </div>
-      
-      <div class="selector">
-            <img class="picker pA1" src="https://image.flaticon.com/icons/svg/67/67778.svg"></img>
-            <img class="picker pA2" src="https://image.flaticon.com/icons/svg/67/67778.svg"></img>
-            <img class="picker pA3" src="https://image.flaticon.com/icons/svg/67/67778.svg"></img>
-            <img class="picker pB4" src="https://image.flaticon.com/icons/svg/67/67778.svg"></img>
-            <img class="picker pB5" src="https://image.flaticon.com/icons/svg/67/67778.svg"></img>
-            <img class="picker pB6" src="https://image.flaticon.com/icons/svg/67/67778.svg"></img>
-            <img class="picker pC7" src="https://image.flaticon.com/icons/svg/67/67778.svg"></img>
-            <img class="picker pC8" src="https://image.flaticon.com/icons/svg/67/67778.svg"></img>
-            <img class="picker pC9" src="https://image.flaticon.com/icons/svg/67/67778.svg"></img>
-        </div>
+            </div>  
 
-    </div>
+            <div class="itemsC" style="display: flex; flex-direction: row;">
+                <span class="itemsC1"></span>
+                <span class="itemsC2"></span>
+                <span class="itemsC3"></span>
+            </div>                                 
+         </div>
+        </div>    
 
     <div class="order">
         <div class="container">
