--- a/vm.html
+++ b/vm.html
@@ -9,19 +9,20 @@
     <title>Document</title>
 </head>
 <body>
-    
-</body>
-</html>
-<div class="machine ">
+    <button onclick="addLi()"  style="width: 100px; height: 60px;">Add</button>
+    <!-- <button id="btn_add_A"  style="width: 100px; height: 60px;">Add</button> -->
+
+    <div class="machine ">
     <!-- <div class="itemsA " style="background-color: white;">
 
     </div> -->
 
     <div class="items">
-        <div class="stack" style="display: flex; flex-direction: column;">           
-                <span class="item-into-stack"></span>
+        <ul class="stack" id="stack" style="display: flex; flex-direction: column;">           
+                <li class="item-into-stack"></li>            
+                <li class="item-into-stack"></li>
                 <p class="option A1">A1</p>                    
-        </div>
+        </ul>
 
         <div class="quees" style="display: flex;  flex-direction: column;">   
 
@@ -72,4 +73,15 @@
         <div class="rectangle"></div>
     </div>
 
+    <!-- scrps to backend, class and Objete, Lists -->
+    <script src="js/Producto.js"></script>
+    <script src="js/vectors-machine.js"></script>
+
+    <!-- dependencias -->
+    <script src="js/jquery.js"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
+
 </div>
+
+</body>
+</html>
