button add fixed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <button onclick="addLi()"  style="width: 100px; height: 60px;">Add</button>
+    <button onclick="addLi()"  class="btn_add_A" style="width: 100px; height: 60px;">Add</button>
     <!-- <button id="btn_add_A"  style="width: 100px; height: 60px;">Add</button> -->
 
     <div class="machine ">
