--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
 
         <div class="quees" style="display: flex;  flex-direction: column;">   
 
-            <div class="itemsB" style="display: flex; flex-direction: row;">
-                <span class="itemsB1"></span>
-                <span class="itemsB2"></span>
-                <span class="itemsB3"></span>
+            <div class="itemsB cont-products-horizontal" style="display: flex; flex-direction: row;">
+                <span class="itemsB1 item-into-stack"></span>
+                <span class="itemsB2 item-into-stack"></span>
+                <span class="itemsB3 item-into-stack"></span>
 
             </div>  
 
-            <div class="itemsC" style="display: flex; flex-direction: row;">
-                <span class="itemsC1"></span>
-                <span class="itemsC2"></span>
-                <span class="itemsC3"></span>
+            <div class="itemsC cont-products-horizontal" style="display: flex; flex-direction: row;">
+                <span class="itemsC1 item-into-stack"></span>
+                <span class="itemsC2 item-into-stack"></span>
+                <span class="itemsC3 item-into-stack"></span>
             </div>                                 
          </div>
         </div>    
