--- a/index.html
+++ b/index.html
@@ -19,24 +19,24 @@
 
     <div class="items">
         <ul class="stack" id="stack" style="display: flex; flex-direction: column;">           
-                <li class="item-into-stack"></li>            
-                <li class="item-into-stack"></li>
+                <li class="cont-item-stack"></li>            
+                <li class="cont-item-stack"></li>
                 <p class="option A1">A1</p>                    
         </ul>
 
         <div class="quees" style="display: flex;  flex-direction: column;">   
 
             <div class="itemsB cont-products-horizontal" style="display: flex; flex-direction: row;">
-                <span class="itemsB1 item-into-stack"></span>
-                <span class="itemsB2 item-into-stack"></span>
-                <span class="itemsB3 item-into-stack"></span>
+                <span class="itemsB1 cont-item"></span>
+                <span class="itemsB2 cont-item"></span>
+                <span class="itemsB3 cont-item"></span>
 
             </div>  
 
             <div class="itemsC cont-products-horizontal" style="display: flex; flex-direction: row;">
-                <span class="itemsC1 item-into-stack"></span>
-                <span class="itemsC2 item-into-stack"></span>
-                <span class="itemsC3 item-into-stack"></span>
+                <span class="itemsC1 cont-item"></span>
+                <span class="itemsC2 cont-item"></span>
+                <span class="itemsC3 cont-item"></span>
             </div>                                 
          </div>
         </div>    
