--- a/index.html
+++ b/index.html
@@ -74,8 +74,12 @@
     </div>
 
     <!-- scrps to backend, class and Objete, Lists -->
+    <script src="js/Moneda.js"></script>
     <script src="js/Producto.js"></script>
     <script src="js/vectors-machine.js"></script>
+    <script src="js/VendingMachine.js"></script>
+    <script src="js/Main.js"></script>
+    
 
     <!-- dependencias -->
     <script src="js/jquery.js"></script>
